--- a/index.html
+++ b/index.html
@@ -301,27 +301,40 @@
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column">
-            <img class="footer__logo" src="images/logo_white.png" alt="Practicum Logo">
+            <img
+              class="footer__logo"
+              src="images/logo_white.png"
+              alt="Practicum Logo"
+            />
           </div>
           <div class="footer__column footer__column_hours">
             <h2 class="footer__heading">Hours</h2>
             <ul class="footer__list">
-            <li class="footer__list-item"> Weekdays: 9am - 8pm</li>
-            <li class="footer__list-item"> Weekends: 10am - 6pm</li>
+              <li class="footer__list-item">Weekdays: 9am - 8pm</li>
+              <li class="footer__list-item">Weekends: 10am - 6pm</li>
             </ul>
           </div>
           <div class="footer__column footer__column_social">
             <h2 class="footer__heading">Social Media</h2>
             <ul class="footer__list">
-              <li class="footer__list-item"
-              <a class="footer__column-link" href="#">
-                <img class="footer__social-icon" src="images/facebook_white.svg" alt="Facebook Logo"/>Facebook
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#">
+                  <img
+                    class="footer__social-icon"
+                    src="images/facebook_white.svg"
+                    alt="Facebook Logo"
+                  />Facebook
                 </a>
               </li>
-              <li class="footer__list-item"
-                  <a class="footer__column-link" href="#">
-                    <img class="footer__social-icon" src="images/instagram_white.svg" alt="Instagram Logo">Instagram
-                  </a>
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#">
+                  <img
+                    class="footer__social-icon"
+                    src="images/instagram_white.svg"
+                    alt="Instagram Logo"
+                  />Instagram
+                </a>
+              </li>
             </ul>
           </div>
         </div>
