--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           <div class="footer__column">
             <img
               class="footer__logo"
-              src="images/logo_white.png"
+              src="./images/logo_white.png"
               alt="Practicum Logo"
             />
           </div>
@@ -335,7 +335,7 @@
             </ul>
           </div>
         </div>
-        <p class="footer__column-copyrights">&copy; 2023 James Swenson</p>
+        <p class="footer__copyright">&copy; 2023 James Swenson</p>
       </footer>
     </div>
   </body>
