--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
               <li class="footer__list-item">Weekends: 10am - 6pm</li>
             </ul>
           </div>
-          <div class="footer__column footer__column_social">
+          <div class="footer__column footer__column_social footer__heading">
             <h2 class="footer__heading">Social Media</h2>
             <ul class="footer__list">
               <li class="footer__list-item">
