latest sprint commit

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <section class="staff">
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
-          <ul class="staff__card">
+          <ul class="staff__cards">
             <li class="card">
               <div class="card__content">
                 <h3 class="card__title">Introduction to Algorithms</h3>
@@ -304,7 +304,9 @@
               alt="Practicum Logo"
             />
           </div>
-          <div class="footer__column footer__column_content_hours">
+          <div
+            class="footer__column footer__column-heading footer__column_content_hours"
+          >
             <h2 class="footer__heading">Hours</h2>
             <ul class="footer__list">
               <li class="footer__list-item">Weekdays: 9am - 8pm</li>
