--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
           <ul class="nav__links">
             <li>
-              <a class="nav__link">Staff picks</a>
+              <a class="nav__link" href="#footer">Staff picks</a>
             </li>
             <li>
               <a class="nav__link" href="#footer">Events</a>
@@ -51,7 +51,7 @@
           class="header__image"
         />
         <div class="header__footer">
-          <a class="header__link">About the library &darr;</a>
+          <a class="header__link" href="#about">About the library &darr;</a>
           <p class="header__address">
             200 Success Avenue, The Town of Practicum
           </p>
@@ -271,7 +271,7 @@
           -->
         </section>
 
-        <section class="about">
+        <section class="about" id="about">
           <h2 class="about__title">About the library</h2>
           <div class="about__content">
             <p class="about__paragraph">
@@ -292,7 +292,7 @@
               the American Geophysical Union.
             </p>
           </div>
-          <div class="about about__circle"></div>
+          <div class="about__circle"></div>
         </section>
       </main>
       <footer class="footer" id="footer">
@@ -335,7 +335,7 @@
             </ul>
           </div>
         </div>
-        <p class="footer__copyright">&copy; 2023 James Swenson</p>
+        <p class="footer__copyright" id="footer">&copy; 2023 James Swenson</p>
       </footer>
     </div>
   </body>
