--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
           <ul class="nav__links">
             <li>
-              <a class="nav__link" href="#footer">Staff picks</a>
+              <a class="nav__link" href="#too-footer">Staff picks</a>
             </li>
             <li>
-              <a class="nav__link" href="#footer">Events</a>
+              <a class="nav__link" href="#too-footer">Events</a>
             </li>
             <li>
-              <a class="nav__link" href="#footer">Become a member</a>
+              <a class="nav__link" href="#too-footer">Become a member</a>
             </li>
             <li>
-              <a class="nav__link" href="#footer">About</a>
+              <a class="nav__link" href="#too-footer">About</a>
             </li>
             <li>
-              <a class="nav__link" href="#footer">Contacts</a>
+              <a class="nav__link" href="#too-footer">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -335,7 +335,9 @@
             </ul>
           </div>
         </div>
-        <p class="footer__copyright" id="footer">&copy; 2023 James Swenson</p>
+        <p class="footer__copyright" id="too-footer">
+          &copy; 2023 James Swenson
+        </p>
       </footer>
     </div>
   </body>
