--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav__link" href="#too-footer">About</a>
             </li>
             <li>
-              <a class="nav__link" href="#too-footer">Contacts</a>
+              <a class="nav__link">Contacts</a>
             </li>
           </ul>
         </nav>
