--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
           your development knowledge, or just use this lovely spot to work or
           study. This is a cool place for cool students!
         </p>
-
         <img
           src="./images/inside_the_library.png"
           alt="Illustration 'Inside the
@@ -295,7 +294,7 @@
           <div class="about__circle"></div>
         </section>
       </main>
-      <footer class="footer" id="footer">
+      <footer class="footer" id="too-footer">
         <div class="footer__columns">
           <div class="footer__column">
             <img
