--- a/index.html
+++ b/index.html
@@ -334,9 +334,7 @@
             </ul>
           </div>
         </div>
-        <p class="footer__copyright" id="too-footer">
-          &copy; 2023 James Swenson
-        </p>
+        <p class="footer__copyright">&copy; 2023 James Swenson</p>
       </footer>
     </div>
   </body>
