--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 
           <ul class="nav__links">
             <li>
-              <a class="nav__link" href="#too-footer">Staff picks</a>
+              <a class="nav__link" href="#staff">Staff picks</a>
             </li>
             <li>
-              <a class="nav__link" href="#too-footer">Events</a>
+              <a class="nav__link" href="#events">Events</a>
             </li>
             <li>
-              <a class="nav__link" href="#too-footer">Become a member</a>
+              <a class="nav__link" href="#members">Become a member</a>
             </li>
             <li>
-              <a class="nav__link" href="#too-footer">About</a>
+              <a class="nav__link" href="#about">About</a>
             </li>
             <li>
               <a class="nav__link" href="#too-footer"> Contacts</a>
@@ -58,7 +58,7 @@
       </header>
 
       <main class="content">
-        <section class="events">
+        <section class="events" id="events">
           <div class="events__content">
             <h2 class="events__heading">Upcoming events:</h2>
             <h3 class="events__title">
@@ -138,7 +138,7 @@
           </div>
         </section>
 
-        <section class="staff">
+        <section class="staff" id="staff">
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
           <ul class="staff__cards">
@@ -213,7 +213,7 @@
           -->
         </section>
 
-        <section class="membership">
+        <section class="members" id="members">
           <h2 class="membership__title">Becoming a library member is easy!</h2>
           <ul class="membership__steps">
             <li class="step">
