--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           </ul>
         </section>
 
-        <section class="members" id="members">
+        <section class="membership" id="membership">
           <h2 class="membership__title">Becoming a library member is easy!</h2>
           <ul class="membership__steps">
             <li class="step">
